# quick-notification

./: .gitignore  README.md  build_pc.py
mobile/: local.properties  settings.gradle.kts
mobile/app/: build.gradle.kts  proguard-rules.pro
mobile/app/src/main/: AndroidManifest.xml
mobile/app/src/main/java/com/jayden/quicknotification/: MainActivity.kt  SmsData.kt  SmsReceiver.kt  WebSocketService.kt
mobile/app/src/main/java/com/quicknotification/: MainActivity.kt  SmsData.kt  SmsReceiver.kt  WebSocketService.kt
mobile/app/src/main/java/com/smsforwarder/: MainActivity.kt  SmsData.kt  SmsReceiver.kt  WebSocketService.kt
mobile/app/src/main/res/drawable/: btn_connect_bg.xml  btn_disconnect_bg.xml  btn_scanning_bg.xml  ic_connect.xml  ic_connected.xml  ic_copy.xml  ic_disconnect.xml  ic_launcher_foreground.xml  ic_log.xml  ic_scanning.xml  ic_settings.xml
mobile/app/src/main/res/layout/: activity_main.xml  dialog_log.xml
mobile/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile/app/src/main/res/values-night/: colors.xml  themes.xml
pc/: PACKAGING.md  build_pc.py  installer.iss  pyproject.toml
pc/src/sms_receiver/: __init__.py  app.py  config.py  filter_config.py  main.py  server.py  ui.py
pc/tests/: test_filter_config.py
