[project]
name = "sms-forwarder-pc"
version = "0.1.0"
description = "PC端短信接收显示服务"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "textual>=0.47.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
sms-receiver = "sms_receiver:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sms_receiver"]
