[project]
name = "quick-message-pc"
version = "0.1.0"
description = "Quick Message PC端 - 短信接收显示桌面应用"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
quick-message = "sms_receiver:main"

[project.gui-scripts]
quick-message-gui = "sms_receiver:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sms_receiver"]
