[project]
name = "quick-notification-pc"
version = "0.1.0"
description = "Quick Notification PC端 - 短信接收显示桌面应用"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
    "customtkinter>=5.2.0",
    "pillow>=10.0.0",
    "pystray>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
quick-notification = "sms_receiver:main"

[project.gui-scripts]
quick-notification-gui = "sms_receiver:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sms_receiver"]
